# worldcup

./: .env.example  .vercelignore  DEPLOY.md  FREE_API_STRATEGY.md  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: predict.yml  web.yml
.superpowers/sdd/: polish-report.md
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/bracket/: loading.tsx  page.tsx
app/dev/: page.tsx
app/predict/: page.tsx
app/scenarios/: page.tsx
app/standings/: page.tsx
components/: CVUpload.tsx  FeaturedMatch.tsx  Flag.tsx  FormationPitch.tsx  LiveDot.tsx  MatchDetail.tsx  MatchQA.tsx  MatchRow.tsx  PitchDivider.tsx  ScenarioLab.tsx  ShareButton.tsx  SiteFooter.tsx  SiteNav.tsx  StandingsGrid.tsx  StandingsTable.tsx  StatComparison.tsx  TacticalAnalysis.tsx  TickerBar.tsx  TournamentPulse.tsx
cv-service/: README.md  main.py  pyproject.toml  requirements.txt
data/: topology.json
data/ratings/: latest.json
design-system/: DESIGN_BRIEF.md  design-tokens.css
lib/: analysis.ts  api-football.ts  apiError.ts  bracket.test.ts  bracket.ts  bracketView.test.ts  bracketView.ts  cache.test.ts  cache.ts  claude.ts  data.ts  espn.ts  format.ts  free-analysis.ts  hooks.ts  og.test.ts  og.ts  predictions.test.ts  predictions.ts  probability.ts  qualification.test.ts  qualification.ts  rateLimit.test.ts  rateLimit.ts  teamColors.ts  topology.test.ts  tournament.test.ts  tournament.ts  tournamentStats.ts  types.ts  vision.ts
model/: README.md  pyproject.toml
(+213 files in other folders)
