[project]
name = "worldcup-cv-service"
version = "0.1.0"
description = "Computer-vision microservice: broadcast screenshot -> tactical analysis via Claude vision"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
]

[tool.uv]
package = false
